# memoriaos-hermes

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_INDEX.md  README.md  pyproject.toml
domain/: compilation_unit.py  observation.py  provenance.py
jobs/obs-pipeline-001/: JOB.md
memoriaos/context/: __init__.py  memory_context.py
memoriaos/domain/: __init__.py  claim.py  compilation_unit.py  evidence.py  knowledge.py  memory.py  observation.py
memoriaos/extractors/: rule_based_claim_extractor.py
memoriaos/hydration/: __init__.py  artifact_hydrator.py  claim_hydrator.py  knowledge_hydrator.py  memory_hydrator.py
memoriaos/pipelines/: __init__.py  claim_pipeline.py  evidence_pipeline.py  knowledge_pipeline.py  memory_pipeline.py  observation_pipeline.py
memoriaos/reasoning/: hermes_reasoning_service.py  mock_reasoning_service.py  reasoning_result.py  reasoning_service.py
memoriaos/repository/: __init__.py  artifact_repository.py  claim_repository.py  evidence_repository.py  knowledge_repository.py  memory_repository.py  observation_repository.py  repository_root.py
memoriaos/services/: __init__.py  memory_context_service.py  memory_retrieval_service.py
processes/obs-pipeline-001/: README.md  obs-pipeline-001.process.yaml
scripts/: evidence_pipeline.py  memoria.py  obs_pipeline.py
tests/: test_claim_hydration.py  test_end_to_end_pipeline.py  test_golden_dataset.py  test_memory_aware_pipeline.py  test_memory_context_service.py  test_memory_query.py  test_memory_retrieval_service.py  test_memory_search.py  test_traceability.py
