[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "memoriaos-hermes"
version = "0.1.0"
description = "Hermes adapter for MemoriaOS"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
include = ["memoriaos*"]
